--- a/papers/Rashba/bib.bib
+++ b/papers/Rashba/bib.bib
@@ -3099,4 +3099,62 @@ url = {http://journal.frontiersin.org/article/10.3389/fphy.2014.00010/abstract},
 volume = {2},
 year = {2014}
 }
+@article{Hohenberg1964,
+abstract = {This paper deals with the ground state of an interacting electron gas in an external potential v(r). It is t proved that there exists a universal functional of the density, F I(r) g, independent of v(r), such that the ex- pression E—=fs(r)n (r)dr+Ft I(r) s(r). The functional FLn(r)j is then discussed for two situations: (1) n(r) @san(r), 8/ao((1, and jhas as its minimum value the correct ground-state energy associated with (2) a(r) =q (r/ra) with p arbitrary and 1'p {\~{}}{\~{}}.In both cases Fcan be expressed entirely in terms of the cor- relation energy and linear and higher order electronic polarizabilities of a uniform electron gas. This approach also sheds some light on generalized Thomas-Fermi methods and their limitations. Some new extensions of these methods are presented.},
+author = {Hohenberg, PHohenberg1964. and Kohn, W.},
+doi = {10.1103/PhysRev.136.B864},
+file = {:home/ponet/Downloads/PhysRev.136.B864.pdf:pdf},
+issn = {0031-899X},
+journal = {Physical Review},
+month = {nov},
+number = {3B},
+pages = {B864--B871},
+title = {{Inhomogeneous Electron Gas}},
+url = {http://link.springer.com/10.1007/BF01198136 https://link.aps.org/doi/10.1103/PhysRev.136.B864},
+volume = {136},
+year = {1964}
+}
+@article{Kohn1965,
+abstract = {From a theory of Hohenberg and Kohn, approximation methods for treating an inhomogeneous system ofinteracting electrons are developed. These methods are exact for systems of slowly varying or high density. For the ground state, they lead to self-consistent equations analogous to the Hartree and Hartree-Fock equations, respectively. In these equations the exchange and correlation portions of the chemical potential of a uniform electron gas appear as additional effective potentials. (The exchange portion of our effective potential differs from that due to Slater by a factor of -';. ) Electronic systems at finite temperatures and in magnetic lelds are also treated by similar methods. An appendix deals with a further correction for systems with short-wavelength density oscillations.},
+author = {Kohn, W. and Sham, L. J.},
+doi = {10.1103/PhysRev.140.A1133},
+file = {:home/ponet/Downloads/PhysRev.140.A1133.pdf:pdf},
+issn = {0031-899X},
+journal = {Physical Review},
+keywords = {Apoptosis,Bcl-2 family,Caspase,Fas-L,HGF cells,NaF},
+month = {nov},
+number = {4A},
+pages = {A1133--A1138},
+title = {{Self-Consistent Equations Including Exchange and Correlation Effects}},
+url = {https://link.aps.org/doi/10.1103/PhysRev.140.A1133},
+volume = {140},
+year = {1965}
+}
+@book{Martin2004,
+abstract = {The study of the electronic structure of materials is at a momentous$\backslash$nstage, with the emergence of new computational methods and theoretical$\backslash$napproaches. This volume provides an introduction to the field and$\backslash$ndescribes its conceptual framework, the capabilities of present methods,$\backslash$nlimitations, and challenges for the future. Many properties of materials$\backslash$ncan now be determined directly from the fundamental equations of$\backslash$nquantum mechanics, bringing new insights into critical problems in$\backslash$nphysics, chemistry, and materials science.},
+author = {Martin, Richard M},
+doi = {10.1017/CBO9780511805769},
+file = {:home/ponet/Downloads/0521782856{\_}TOC.pdf:pdf},
+isbn = {9780521534406},
+month = {apr},
+pages = {648s},
+publisher = {Cambridge University Press},
+title = {{Electronic Structure}},
+url = {https://www.cambridge.org/core/product/identifier/9780511805769/type/book},
+year = {2004}
+}
+
+@article{Hamann2013,
+abstract = {Fully nonlocal two-projector norm-conserving pseudopotentials are shown to be compatible with a systematic approach to the optimization of convergence with the size of the plane-wave basis. A reformulation of the optimization is developed, including the ability to apply it to positive-energy atomic scattering states and to enforce greater continuity in the pseudopotential. The generalization of norm conservation to multiple projectors is reviewed and recast for the present purposes. Comparisons among the results of all-electron and one- and two-projector norm-conserving pseudopotential calculations of lattice constants and bulk moduli are made for a group of solids chosen to represent a variety of types of bonding and a sampling of the periodic table. {\textcopyright} 2013 American Physical Society.},
+author = {Hamann, D. R.},
+doi = {10.1103/PhysRevB.88.085117},
+file = {:home/ponet/Downloads/PhysRevB.88.085117.pdf:pdf},
+issn = {10980121},
+journal = {Physical Review B - Condensed Matter and Materials Physics},
+number = {8},
+pages = {1--10},
+title = {{Optimized norm-conserving Vanderbilt pseudopotentials}},
+volume = {88},
+year = {2013}
+}
 
