--- a/papers/Theory/Theory.tex
+++ b/papers/Theory/Theory.tex
@@ -1,6 +1,6 @@
 \chapter{Theory}
 \section{Spin-orbit coupling}
-\section{Wannier Functions}
+\section{Wannier Functions \label{sec:Wannier}}
 
 In a lot of the work presented in this Thesis we construct simplified model Hamiltonians to try and describe the physics that are manifested real materials.
 For topics involving the electronic structure, either directly in describing the Rashba-splitting of energy bands in Chapter \ref{ch:Rashba}, or indirectly to parametrize the magnetic exchanges between localized spins as in Chapter \ref{ch:GdMn2O5}, tight-binding models are often the most appropriate tool.
