--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -111,7 +111,7 @@ This can be either because the energy scales and associated timescales that gove
 One example, often put into practice, is the separation of electronic and phononic (lattice) degrees of freedom, leading to the well-known Born-Oppenheimer approximation, decoupling their respective motion.
 Another is the often neglected spin-orbit coupling, due to the tiny prefactor associated with its relativistic origin.
 
-Solving these subproblems then allows for progress to be made in understanding the physics that govern them.
+Solving these subproblems then allows for progress to be made in understanding the physics that governs them.
 However, there will inevitably be systems for which this interaction is not small and leads to fascinating new physics that manifestly depends on both subsystems combined.
 In this thesis we focus on these cases and how they arise in functional materials, with the occasional eye towards applications in technology.
 
