--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -351,7 +351,6 @@ The reciprocal space was sampled using a 6x6x6 Monkhorst-Pack grid\cite{Pack1977
 
 Afterwards we used the {\texttt Wannier90} package \cite{Mostofi2014AnFunctions} to perform the Wannierization as described in the theory Chapter \ref{sec:Wannier}, using projections on hydrogenic $s$- and $p$-orbitals for both Ge and Te ions as the initial guess.
 A 10x10x10 $k$-grid was used for the sampling of the BZ during the Wannierization. 
-The result is shown in Fig.~\ref{fig:GeTe_wannierization}.
 \begin{figure}[b!]
 \IncludeGraphics[width=\linewidth]{wanvsdft.png}
 \caption{\label{fig:GeTe_wannierization} Result of Wannierization procedure for non-relativistic (a) and relativistic (b) calculations.}
@@ -361,12 +360,18 @@ The result is shown in Fig.~\ref{fig:GeTe_wannierization}.
 \lp{look in the high throughput paper for a decent definition of the wannier band distance w.r.t the dft one!}
 
 \section{Results and Discussion}
-The bands we will focus on most are the three topmost valence bands. As seen in Fig. \ref{fig:Rashba_BZBSDOS}-(b), these bands have the largest spin-splitting.
-This suggests that indeed the atomic SOC plays an important rule, seen as these bands are comprised mostly of Te orbitals, and SOC is largest on Te.
-If one were to fit the dispersion of the topmost band to Eq.~\ref{eq:Rashba_form}, it results in a large prefactor $\alpha_R\approx 30.7$~eV$\cdot$\angstrom \cite{DiSante2013}.
-As discussed before, a more realistic prefactor would be $\alpha_R=10^{-6}$~eV in the purely relativistic case inside the vacuum.
 
-The last issue with the purely relativistic explanation, which has been confirmed experimentally\cite{Krempasky2015SurfaceSemiconductor}, lies in the orientation of the spin polarization of the split bands. According to Eq.~\ref{eq:Rashba_form}, the bands should all be split equally and Bloch functions at the same $k$-point should have the same spin orientations, since their character does not enter Eq.~\ref{eq:Rashba_form}. However, as has been shown and will be confirmed by our results below, the orientation depends on the character of the band, more specifically on the value of the total angular momentum $j$. 
+The bands we will focus on most are the three topmost valence bands which consist mostly of Te $p$-orbitals, as can be seen from Fig.~\ref{fig:Rashba_bands_dos}(b).
+These demonstrate the largest spin-splitting suggesting that indeed the atomic SOC plays an important rule, seen as it is larger on Te compared to Ge.
+If one were to fit the dispersion of the topmost band to Eq.~\ref{eq:Rashba_form}, a large prefactor $\alpha_R\approx 30.7$~eV$\cdot$\angstrom \cite{DiSante2013} is found.
+As discussed before, a purely relativistic effect would rather have a prefactor of $\alpha_R=10^{-6}$~eV.
+
+Another hard to explain observation by purely relativistic means, is the orientation of the spin-polarization inside the different split bands.
+It was found that depending on the band, the spin is oriented such that $\alpha_R$ in Eq.~\ref{eq:Rashba_form} is either negative or positive. 
+This has been confirmed experimentally\cite{Krempasky2015SurfaceSemiconductor}, and can only be explained through the OAM and atomic SOC mechanism, and depends on the value of the total angular momentum $j$.
+How exactly this manifests itself in our results will be discussed further down.
+
+
 
 \lp{also put some values on the wannier centers etc}
 The dispersion, OAM, and SAM of the first valence band are shown in the left panel of Fig.~\ref{fig:Rashba_oamvseigvalv}. Confirming our earlier conclusions, we can see that non-zero, linearly varying OAM is formed as we move away from the high-symmetry $Z$-point. Moreover, the OAM is perpendicular to both the $z$-axis and the $k$ vector, as it should be from Eq.~\ref{eq:oam_from_k}, and can also be seen from the panels in Fig. \ref{fig:Rashba_textures}. This leads e.g. to $l_y=0$ along the $A \to Z$ path, where only $k_y$ is nonzero. When atomic SOC is included in the orange and blue graphs, we see the spin-splitting that results from having the spin oriented either along or opposite to the already linearly varying OAM. The unquenching of the OAM at the $Z$-point when SOC is included is also clearly visible, together with the resulting change in the slope that originates from the corresponding contribution to the dipole moment Eq.~\ref{eq:d_z_from_OAM}. This correlation can also be observed in the panel showing the center of mass $\bar{z}=\int_{\textrm{supercell}}z |\psi(k)|^2$ of the Bloch-functions, which is proportional to the dipole moment around the same reference point.
